--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,5 +13,7 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
+- script: dotnet restore src/KongoloGym
+  displayName: 'Restore dependencies'
 - script: dotnet build --configuration $(buildConfiguration) src/KongoloGym
-  displayName: 'dotnet build $(buildConfiguration)'
+  displayName: '$(buildConfiguration) build'
