--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,7 @@ variables:
   buildConfiguration: 'Release'
   dockerId: mattwatson1
   imageName: kongologym
+  tag: $(Build.BuildId)
 
 steps:
 - script: dotnet restore src/KongoloGym
@@ -23,7 +24,7 @@ steps:
   inputs:
     containerRegistry: 'DockerHub ($(dockerId))'
     command: 'login'
-- script: docker build -t $(dockerId)/$(imageName) .
+- script: docker build -t $(dockerId)/$(imageName):$(tag) .
   displayName: 'Docker Build'
-- script: docker push $(dockerId)/$(imageName)
+- script: docker push $(dockerId)/$(imageName):$(tag)
   displayName: 'Docker Push'
