Try to add build number as tag

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,10 +10,13 @@ pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-  buildConfiguration: 'Release'
-  dockerId: mattwatson1
-  imageName: kongologym
-  tag: $(Date:yyyyMMdd)$(Rev:.r)
+- group: Variables
+- name: buildConfiguration
+  value: 'Release'
+- name: dockerId
+  value: mattwatson1
+- name: imageName
+  value: kongologym
 
 steps:
 - script: dotnet restore src/KongoloGym
