--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,9 @@ steps:
   inputs:
     containerRegistry: 'DockerHub ($(dockerId))'
     command: 'login'
-- script: docker build -t $(dockerId)/$(imageName):$(tag) .
+- script: docker build -t $(dockerId)/$(imageName):latest -t $(dockerId)/$(imageName):$(tag).
   displayName: 'Docker Build'
 - script: docker push $(dockerId)/$(imageName):$(tag)
-  displayName: 'Docker Push'
+  displayName: 'Docker Push tag'
+- script: docker push $(dockerId)/$(imageName):latest
+  displayName: 'Docker Push latest'
