--- a/src/KongoloGym/KongoloGym.fsproj
+++ b/src/KongoloGym/KongoloGym.fsproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.*" />
     <PackageReference Include="Giraffe" Version="3.4.*" />
+    <PackageReference Include="prometheus-net.AspNetCore" Version="3.1.4" />
     <PackageReference Include="TaskBuilder.fs" Version="2.1.*" />
   </ItemGroup>
 
