Add Serilog (to elasticsearch)

--- a/src/KongoloGym/KongoloGym.fsproj
+++ b/src/KongoloGym/KongoloGym.fsproj
@@ -12,6 +12,9 @@
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.*" />
     <PackageReference Include="Giraffe" Version="3.4.*" />
     <PackageReference Include="prometheus-net.AspNetCore" Version="3.1.4" />
+    <PackageReference Include="serilog" Version="2.8.0" />
+    <PackageReference Include="serilog.sinks.console" Version="3.1.1" />
+    <PackageReference Include="serilog.sinks.elasticsearch" Version="8.0.0" />
     <PackageReference Include="TaskBuilder.fs" Version="2.1.*" />
   </ItemGroup>
 
